used ngModel to implement a two-way binding

--- a/src/app/second component/input-binding/input-binding.component.html
+++ b/src/app/second component/input-binding/input-binding.component.html
@@ -2,7 +2,7 @@
   <input
     type="text"
     placeholder="Enter your name"
-    value="{{ name }}"
+    ngModel="{{ name }}"
     (input)="changeText($event)"
   />
 
