--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
-<h1>Hello World!</h1>
-<custom-heading></custom-heading>
+<!-- <h1>Hello World!</h1>
+<custom-heading></custom-heading> -->
 <app-input-binding></app-input-binding>
