added the slider structure

--- a/src/app/slider component/slider/slider.component.html
+++ b/src/app/slider component/slider/slider.component.html
@@ -1,1 +1,11 @@
-<p>slider works!</p>
+<section class="slider">
+  <article class="slider-image">
+    <div><img src="./assets/images/arrow-circle-left-bold.png" alt="" /></div>
+    <div><img src="./assets/images/0.jpg" alt="" /></div>
+    <div><img src="./assets/images/arrow-circle-right-bold.png" alt="" /></div>
+  </article>
+  <article class="slide-show">
+    <div><img src="./assets/images/repeat-bold.png" alt="" /></div>
+    <div><img src="./assets/images/stop-circle-bold.png" alt="" /></div>
+  </article>
+</section>
