--- a/src/app/slider component/slider/slider.component.html
+++ b/src/app/slider component/slider/slider.component.html
@@ -1,11 +1,19 @@
 <section class="slider">
   <article class="slider-image">
-    <div><img src="./assets/images/arrow-circle-left-bold.png" alt="" /></div>
+    <div class="cursor-p">
+      <img src="./assets/images/arrow-circle-left-bold.png" alt="" />
+    </div>
     <div><img src="./assets/images/0.jpg" alt="" /></div>
-    <div><img src="./assets/images/arrow-circle-right-bold.png" alt="" /></div>
+    <div class="cursor-p">
+      <img src="./assets/images/arrow-circle-right-bold.png" alt="" />
+    </div>
   </article>
   <article class="slide-show">
-    <div><img src="./assets/images/repeat-bold.png" alt="" /></div>
-    <div><img src="./assets/images/stop-circle-bold.png" alt="" /></div>
+    <div class="cursor-p">
+      <img src="./assets/images/repeat-bold.png" alt="" />
+    </div>
+    <div class="cursor-p">
+      <img src="./assets/images/stop-circle-bold.png" alt="" />
+    </div>
   </article>
 </section>
