--- a/src/app/slider component/slider/slider.component.html
+++ b/src/app/slider component/slider/slider.component.html
@@ -1,10 +1,10 @@
 <section class="slider">
   <article class="slider-image">
-    <div class="cursor-p">
+    <div class="cursor-p" (click)="prev()" title="previous">
       <img src="./assets/images/arrow-circle-left-bold.png" alt="" />
     </div>
-    <div><img src="./assets/images/0.jpg" alt="" /></div>
-    <div class="cursor-p">
+    <div><img src="./assets/images/{{ src }}.jpg" alt="" /></div>
+    <div class="cursor-p" (click)="next()" title="next">
       <img src="./assets/images/arrow-circle-right-bold.png" alt="" />
     </div>
   </article>
