implemented the slide show functionality

--- a/src/app/slider component/slider/slider.component.html
+++ b/src/app/slider component/slider/slider.component.html
@@ -9,10 +9,10 @@
     </div>
   </article>
   <article class="slide-show">
-    <div class="cursor-p">
+    <div class="cursor-p" (click)="repeat()">
       <img src="./assets/images/repeat-bold.png" alt="" />
     </div>
-    <div class="cursor-p">
+    <div class="cursor-p" (click)="clear()">
       <img src="./assets/images/stop-circle-bold.png" alt="" />
     </div>
   </article>
