added the final touches to the slider

--- a/src/app/slider component/slider/slider.component.html
+++ b/src/app/slider component/slider/slider.component.html
@@ -9,10 +9,10 @@
     </div>
   </article>
   <article class="slide-show">
-    <div class="cursor-p" (click)="repeat()">
+    <div class="cursor-p" (click)="repeat()" title="slide show">
       <img src="./assets/images/repeat-bold.png" alt="" />
     </div>
-    <div class="cursor-p" (click)="clear()">
+    <div class="cursor-p" (click)="clear()" title="stop slide show">
       <img src="./assets/images/stop-circle-bold.png" alt="" />
     </div>
   </article>
