added the components structure for registration

--- a/src/app/app component/app.component.html
+++ b/src/app/app component/app.component.html
@@ -1,4 +1,8 @@
 <!-- <h1>Hello World!</h1>
 <custom-heading></custom-heading> -->
 <!-- <app-input-binding></app-input-binding> -->
-<app-slider></app-slider>
+<!-- <app-slider></app-slider> -->
+<div class="container">
+  <app-registration></app-registration>
+  <app-students></app-students>
+</div>
