--- a/src/app/registration component/registration/registration.component.html
+++ b/src/app/registration component/registration/registration.component.html
@@ -1,8 +1,6 @@
 <h1>Registration</h1>
 <section class="form">
-  <!-- <input type="text" placeholder="Enter your name" [ngModel]="name" />
-  <input type="text" placeholder="Enter your age" [ngModel]="age" />
-  <input type="button" value="Add" (click)="add()" /> -->
-
-  <p>{{ name }}</p>
+  <input type="text" placeholder="Enter your name" [(ngModel)]="name" />
+  <input type="text" placeholder="Enter your age" [(ngModel)]="age" />
+  <input type="button" value="Add" (click)="add()" />
 </section>
