--- a/src/app/app component/app.component.html
+++ b/src/app/app component/app.component.html
@@ -3,6 +3,6 @@
 <!-- <app-input-binding></app-input-binding> -->
 <!-- <app-slider></app-slider> -->
 <div class="container">
-  <app-registration></app-registration>
+  <app-registration (getEvent)="getData($event)"></app-registration>
   <app-students></app-students>
 </div>
