passed the data from the parent to the students and displayed it

--- a/src/app/app component/app.component.html
+++ b/src/app/app component/app.component.html
@@ -4,5 +4,5 @@
 <!-- <app-slider></app-slider> -->
 <div class="container">
   <app-registration (getEvent)="getData($event)"></app-registration>
-  <app-students></app-students>
+  <app-students [studentsData]="students"></app-students>
 </div>
