--- a/src/app/registration component/registration/registration.component.css
+++ b/src/app/registration component/registration/registration.component.css
@@ -23,3 +23,7 @@ input[type="button"] {
 input[type="button"]:hover {
   background-color: rgb(0, 153, 255);
 }
+
+.error {
+  border-color: red;
+}
