added the components for the login

--- a/src/app/app component/app.component.html
+++ b/src/app/app component/app.component.html
@@ -3,6 +3,8 @@
 <!-- <app-input-binding></app-input-binding> -->
 <!-- <app-slider></app-slider> -->
 <div class="container">
-  <app-registration (getEvent)="getData($event)"></app-registration>
-  <app-students [studentsData]="students"></app-students>
+  <!-- <app-registration (getEvent)="getData($event)"></app-registration>
+  <app-students [studentsData]="students"></app-students> -->
+  <app-login></app-login>
+  <app-users></app-users>
 </div>
