added the login component UI

--- a/src/app/app component/app.component.html
+++ b/src/app/app component/app.component.html
@@ -2,9 +2,9 @@
 <custom-heading></custom-heading> -->
 <!-- <app-input-binding></app-input-binding> -->
 <!-- <app-slider></app-slider> -->
-<div class="container">
-  <!-- <app-registration (getEvent)="getData($event)"></app-registration>
+<!-- <div class="container"> -->
+<!-- <app-registration (getEvent)="getData($event)"></app-registration>
   <app-students [studentsData]="students"></app-students> -->
-  <app-login></app-login>
-  <app-users></app-users>
-</div>
+<app-login></app-login>
+<app-users></app-users>
+<!-- </div> -->
