--- a/src/app/login component/login/login.component.html
+++ b/src/app/login component/login/login.component.html
@@ -1,1 +1,51 @@
-<button class="btn btn-danger">click</button>
+<div class="wrapper">
+  <div class="container main">
+    <div class="row">
+      <div class="col-md-6 side-image">
+        <!-- Image -->
+        <img src="./assets/images/angular-logo-bold.png" alt="" />
+        <div class="text">
+          <p>Join the community of MEARN Ninja's - <i>ITI</i></p>
+        </div>
+      </div>
+      <div class="col-md-6 right">
+        <div class="input-box">
+          <header>Create a user</header>
+          <div class="input-field">
+            <input
+              type="text"
+              id="name"
+              class="input"
+              required
+              autocomplete="off"
+            />
+            <label for="name">Name</label>
+          </div>
+          <div class="input-field">
+            <input
+              type="text"
+              id="email"
+              class="input"
+              required
+              autocomplete="off"
+            />
+            <label for="email">Email</label>
+          </div>
+          <div class="input-field">
+            <input
+              type="text"
+              id="age"
+              class="input"
+              required
+              autocomplete="off"
+            />
+            <label for="age">Age</label>
+          </div>
+          <div class="input-field">
+            <input type="submit" class="submit" value="Join" />
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
