added the users data component

--- a/src/app/users component/users/users.component.html
+++ b/src/app/users component/users/users.component.html
@@ -1,1 +1,15 @@
-<p>users works!</p>
+<section class="students-container">
+  <h1>Users Data</h1>
+  <table>
+    <thead>
+      <th>Name</th>
+      <th>Age</th>
+    </thead>
+    <tbody>
+      <!-- <tr *ngFor="let s of studentsData">
+        <td>{{ s.name }}</td>
+        <td>{{ s.age }}</td>
+      </tr> -->
+    </tbody>
+  </table>
+</section>
