--- a/src/app/login component/login/login.component.html
+++ b/src/app/login component/login/login.component.html
@@ -18,6 +18,7 @@
               class="input"
               required
               autocomplete="off"
+              [(ngModel)]="name"
             />
             <label for="name">Name</label>
           </div>
@@ -28,6 +29,7 @@
               class="input"
               required
               autocomplete="off"
+              [(ngModel)]="email"
             />
             <label for="email">Email</label>
           </div>
@@ -38,11 +40,12 @@
               class="input"
               required
               autocomplete="off"
+              [(ngModel)]="age"
             />
             <label for="age">Age</label>
           </div>
           <div class="input-field">
-            <input type="submit" class="submit" value="Join" />
+            <input type="submit" (click)="join()" class="submit" value="Join" />
           </div>
         </div>
       </div>
