connected the input fields styling with the validations logic

--- a/src/app/login component/login/login.component.css
+++ b/src/app/login component/login/login.component.css
@@ -112,9 +112,8 @@ i {
   color: #5d5076;
 }
 
-.input-field input:focus,
-/* .input-field input:valid, */
-.ng-valid {
+.input-field input:focus
+/* .input-field input:valid, */ {
   border-bottom: 1px solid #743ae1;
 }
 
@@ -137,12 +136,4 @@ i {
 .input-field .submit:hover {
   background-color: rgba(37, 95, 156, 0.8);
   color: #fff;
-}
-
-.ng-invalid {
-  border-bottom: 1px solid rgb(200, 0, 0);
-}
-
-form {
-  border: none !important;
 }
