--- a/src/app/app component/app.component.css
+++ b/src/app/app component/app.component.css
@@ -6,3 +6,11 @@
   width: 80%;
   margin: 30px auto;
 }
+
+.page-container {
+  display: flex;
+  justify-content: space-evenly;
+  justify-content: center;
+  align-items: center;
+  background-color: #eee;
+}
