--- a/src/app/login component/login/login.component.css
+++ b/src/app/login component/login/login.component.css
@@ -18,6 +18,10 @@
   box-shadow: 5px 5px 10px 1px rgba(0, 0, 0, 0.2);
 }
 
+.row-updated {
+  width: 450px;
+}
+
 .side-image {
   background-image: url("../../../assets/images/login-4.jpg");
   background-position: center;
@@ -27,11 +31,24 @@
   border-radius: 10px 0 0 10px;
 }
 
+.side-image-updated {
+  border-radius: 10px 10px 0 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+}
+
 img {
   width: 35px;
   position: absolute;
   top: 30px;
   left: 30px;
+}
+
+.logo-updated {
+  position: static;
 }
 
 .text {
@@ -40,6 +57,11 @@ img {
   left: 50%;
   transform: translate(-50%, -50%);
   width: 60%;
+}
+
+.text-updated {
+  position: static;
+  transform: none;
 }
 
 .text p {
@@ -134,6 +156,6 @@ i {
 }
 
 .input-field .submit:hover {
-  background-color: rgba(37, 95, 156, 0.8);
+  background-color: #743ae1;
   color: #fff;
 }
